--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=chatbasic
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+chatgpt.api.url=https://api.openai.com/v1/completions
+chatgpt.api.key=SUA_CHAVE_API_AQUI
